kubernetes/resilience-tests/book-virtual-service-with-delay.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: book
spec:
  hosts:
    - book
  http:
  - route:
    - destination:
        host: book
    fault:
      delay:
        fixedDelay: 3s
        percent: 100
